--- a/css/style5.css
+++ b/css/style5.css
@@ -33,7 +33,7 @@
     
     .menu li {
         float: left;
-        width: 100px;
+        width: 110px;
         height: inherit;
         display: block;
         vertical-align: middle;
@@ -49,11 +49,11 @@
     }
     
     .menu .left {
-        margin-right: 50px;
-        width: 200px;
+        margin-right: 40px;
+        width: 210px;
     }
     
-    .menu .wide:hover {
+    .menu .wide :hover {
         background: linear-gradient(to bottom, #51b1dc 0%, #2e7ac4 100%);
     }
     
@@ -63,7 +63,7 @@
     }
     
     #divider {
-        width: 10px;
+        width: 20px;
     }
     
     #divider img {
@@ -90,19 +90,30 @@
     }
     
     .fon {
-        width: 730px;
-        height: 780px;
+        width: 740px;
+        height: 750px;
         background: black;
         background: rgba(0, 0, 0, 0.6);
         position: relative;
-        top: 250px;
+        top: 216px;
         margin: auto;
     }
     
-    .right div {
-        width: 730px;
-        border: solid 1px #c8c8c8;
+    .top {
+        width: 740px;
         height: 50px;
-        margin-top: -1px;
-        display: block;
+        background: black;
+        background: rgba(0, 0, 0, 0.6);
+        position: relative;
+        top: 230px;
+        margin: auto;
+    }
+    
+    .top p {
+        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 25px;
+        color: white;
+        padding-top: 10px;
     }
